--- a/404.html
+++ b/404.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>Hello!</title>
-</head>
-<body>
-<h1>Oops!</h1>
-<p>Sorry, I don't know what you're asking for.</p>
-</body>
-</html>
+<html><body>404 Not Found</body></html>
