--- a/hello.html
+++ b/hello.html
@@ -1,1 +1,11 @@
-<html><body>Hello</body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Hello!</title>
+</head>
+<body>
+<h1>Hello!</h1>
+<p>Hi from Rust</p>
+</body>
+</html>
